refactor + copy file workaround