@@ -20,90 +20,79 @@ public class DatasetSubject {
 
     public DatasetSubject(File descriptor) throws IOException {
         this.descriptor = descriptor;
-        String var10003 = descriptor.getName();
-        int var10005 = descriptor.getName().length();
-        this.media = new File("D:\\Users\\jilek\\Documents\\Dataset\\" + var10003.substring(0, var10005 - 4));
+        this.media = new File(Main.rootPath + "\\" + descriptor.getName().substring(0, descriptor.getName().length() - 4));
+
         List<String> description = Files.readAllLines(descriptor.toPath());
-        this.score = Integer.parseInt((String)description.get(2));
-        this.rating = (String)description.get(1);
-        this.tags = ((String)description.get(3)).split("\\*");
+
+        this.score = Integer.parseInt(description.get(2));
+        this.rating = description.get(1);
+        this.tags = description.get(3).split("\\*");
         this.id = this.media.getName().split("\\.")[0];
     }
 
     public boolean meetsRequirements(int minScore, String[] includeTags, String[] excludeTags, String[] includeRating, String[] extensions) {
         if (minScore > this.score) {
             return false;
-        } else if (!Arrays.asList(includeRating).contains(this.rating)) {
+        }
+
+        if (!Arrays.asList(includeRating).contains(this.rating)) {
             return false;
-        } else {
-            int includeTagsMatched = 0;
-            String[] var7 = includeTags;
-            int var8 = includeTags.length;
+        }
 
-            int var9;
-            String excludeTag;
-            String[] var11;
-            int var12;
-            int var13;
-            String tag;
-            for(var9 = 0; var9 < var8; ++var9) {
-                excludeTag = var7[var9];
-                var11 = this.tags;
-                var12 = var11.length;
-
-                for(var13 = 0; var13 < var12; ++var13) {
-                    tag = var11[var13];
-                    if (excludeTag.equals(tag)) {
-                        ++includeTagsMatched;
-                        break;
-                    }
-                }
-
-                if (includeTagsMatched == includeTags.length) {
+        int includeTagsMatched = 0;
+        for (String includeTag : includeTags) {
+            for (String tag : tags) {
+                if (includeTag.equals(tag)) {
+                    ++includeTagsMatched;
                     break;
                 }
             }
+            if (includeTagsMatched == includeTags.length) {
+                break;
+            }
+        }
 
-            if (includeTagsMatched != includeTags.length) {
-                return false;
-            } else {
-                var7 = excludeTags;
-                var8 = excludeTags.length;
+        if (includeTagsMatched != includeTags.length) {
+            return false;
+        }
 
-                for(var9 = 0; var9 < var8; ++var9) {
-                    excludeTag = var7[var9];
-                    var11 = this.tags;
-                    var12 = var11.length;
-
-                    for(var13 = 0; var13 < var12; ++var13) {
-                        tag = var11[var13];
-                        if (excludeTag.equals(tag)) {
-                            return false;
-                        }
-                    }
-                }
-
-                if (!Arrays.asList(extensions).contains(this.media.getName().split("\\.")[1])) {
+        for (String value : excludeTags) {
+            for (String tag : tags) {
+                if (value.equals(tag)) {
                     return false;
-                } else {
-                    return true;
                 }
             }
         }
+
+        if (!Arrays.asList(extensions).contains(this.media.getName().split("\\.")[1])) {
+            return false;
+        }
+
+        return true;
     }
 
     public void createTagFile(String addDefaultTag) throws IOException {
         String tagsOut = String.join(", ", this.tags);
-        File output = new File("D:\\Users\\jilek\\Documents\\working\\" + this.id + ".txt");
+
+        File output = new File(Main.outputPath + "\\" + this.id + ".txt");
         output.createNewFile();
-        Files.writeString(output.toPath(), addDefaultTag + ", " + tagsOut);
+
+        if(addDefaultTag.equals("")){
+            Files.writeString(output.toPath(), tagsOut);
+        }else{
+            Files.writeString(output.toPath(), addDefaultTag + ", " + tagsOut);
+        }
     }
 
-    public void createLink() throws IOException, ShellLinkException {
-        ShellLink sl = new ShellLink();
-        Path targetPath = Paths.get(this.media.toURI()).toAbsolutePath();
-        String root = targetPath.getRoot().toString();
-        String path = targetPath.subpath(0, targetPath.getNameCount()).toString();
-        (new ShellLinkHelper(sl)).setLocalTarget(root, path, Options.ForceTypeFile).saveTo("D:\\Users\\jilek\\Documents\\working\\" + this.media.getName() + ".lnk");
+    public void createLink(boolean copy) throws IOException, ShellLinkException {
+        if(copy){
+            Files.copy(media.toPath(), Path.of(Main.outputPath + "\\" + media.getName()));
+        }else{
+            ShellLink sl = new ShellLink();
+            Path targetPath = Paths.get(this.media.toURI()).toAbsolutePath();
+            String root = targetPath.getRoot().toString();
+            String path = targetPath.subpath(0, targetPath.getNameCount()).toString();
+            (new ShellLinkHelper(sl)).setLocalTarget(root, path, Options.ForceTypeFile).saveTo(Main.outputPath + "\\" + this.media.getName() + ".lnk");
+        }
     }
 }
